--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 
 .myframe {
   width: 100%;
-  hight: 100%;
+  height: 100%;
   /*
   background-color: lightblue;
   */
@@ -11,7 +11,7 @@
 button_table {
   table-layout:fixed;
   width: 100%;
-  hight: 100%;
+  height: 100%;
 }
 
 canvas{
